[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "00"
path = "days/00.rs"

[[bin]]
name = "01"
path = "days/01.rs"

[[bin]]
name = "02"
path = "days/02.rs"

[[bin]]
name = "03"
path = "days/03.rs"

[[bin]]
name = "04"
path = "days/04.rs"

[[bin]]
name = "05"
path = "days/05.rs"

[[bin]]
name = "06"
path = "days/06.rs"

[dependencies]
regex="*"
itertools = "*"
rayon = "*"
