[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[[bin]]
name = "00"
path = "days/00.rs"

[[bin]]
name = "01"
path = "days/01.rs"

[[bin]]
name = "02"
path = "days/02.rs"

[[bin]]
name = "03"
path = "days/03.rs"

[[bin]]
name = "04"
path = "days/04.rs"

[[bin]]
name = "05"
path = "days/05.rs"

[[bin]]
name = "06"
path = "days/06.rs"

[[bin]]
name = "07"
path = "days/07.rs"

[[bin]]
name = "08"
path = "days/08.rs"

[[bin]]
name = "09"
path = "days/09.rs"

[[bin]]
name = "10"
path = "days/10.rs"

[[bin]]
name = "11"
path = "days/11.rs"

[[bin]]
name = "12"
path = "days/12.rs"

[[bin]]
name = "13"
path = "days/13.rs"

[dependencies]
regex = "*"
itertools = "*"
rayon = "*"
